Method reference examples added